Some errors solved

--- a/.env
+++ b/.env
@@ -1,18 +1,18 @@
-# Cloud Database (Clever Cloud)
-DB_HOST=bsm8xnr5jyrp3n1cvbdo-mysql.services.clever-cloud.com
-DB_USER=ul7a9pd2vbbntl54
-DB_PASSWORD=d0HYp0fLCtr0yjeSOMgb
-DB_NAME=bsm8xnr5jyrp3n1cvbdo
-DB_PORT=3306
+# Cloud Database (Clever Cloud) - COMMENTED OUT FOR LOCAL DEV
+# DB_HOST=bsm8xnr5jyrp3n1cvbdo-mysql.services.clever-cloud.com
+# DB_USER=ul7a9pd2vbbntl54
+# DB_PASSWORD=d0HYp0fLCtr0yjeSOMgb
+# DB_NAME=bsm8xnr5jyrp3n1cvbdo
+# DB_PORT=3306
 
 JWT_SECRET=yourjwtsecret
 PORT=4000
 
-# Local Database (Backup)
-# DB_HOST=localhost
-# DB_USER=root
-# DB_PASSWORD=Shruti@1408
-# DB_NAME=spf
+# Local Database (Active)
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=Shruti@1408
+DB_NAME=spf
 
 # Email Configuration (for Password Reset)
 # If using Gmail, use an 'App Password' from your Google Account settings
