--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@ logs
 *.log
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
@@ -24,4 +23,4 @@ dist-ssr
 *.sw?
 
 .vercel
-.env*.local
+.env
