Automation of Payments

--- a/.env
+++ b/.env
@@ -1,10 +1,4 @@
-# Cloud Database (Clever Cloud) - COMMENTED OUT FOR LOCAL DEV
-# DB_HOST=bsm8xnr5jyrp3n1cvbdo-mysql.services.clever-cloud.com
-# DB_USER=ul7a9pd2vbbntl54
-# DB_PASSWORD=d0HYp0fLCtr0yjeSOMgb
-# DB_NAME=bsm8xnr5jyrp3n1cvbdo
-# DB_PORT=3306
-
+# Database Configuration
 JWT_SECRET=yourjwtsecret
 PORT=4000
 
@@ -18,3 +12,7 @@ DB_NAME=spf
 # If using Gmail, use an 'App Password' from your Google Account settings
 EMAIL_USER=your-email@gmail.com
 EMAIL_PASS=your-app-password
+
+# WhatsApp Configuration (Meta Graph API)
+WHATSAPP_PHONE_ID=your-phone-number-id
+WHATSAPP_TOKEN=your-access-token
